✨ Display author's social accounts

--- a/templates/blog/author.html
+++ b/templates/blog/author.html
@@ -21,28 +21,23 @@
                         <div class="social-media">
                             <ul class="list-inline">
                                 <li>
-                                    <a href="#" class="color-facebook">
+                                    <a href="{{ author.facebook_url }}" class="color-facebook">
                                         <i class="fab fa-facebook-f"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="color-instagram">
+                                    <a href="{{ author.instagram_url }}" class="color-instagram">
                                         <i class="fab fa-instagram"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="color-twitter">
+                                    <a href="{{ author.twitter_url }}" class="color-twitter">
                                         <i class="fab fa-twitter"></i>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#" class="color-youtube">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="color-pinterest">
-                                        <i class="fab fa-pinterest"></i>
+                                    <a href="{{ author.linkedin_url }}" class="color-linkedin">
+                                        <i class="fab fa-linkedin-in"></i>
                                     </a>
                                 </li>
                             </ul>
@@ -82,10 +77,10 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.name}}</a>
+                                                <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.full_name}}</a>
                                             </li>
                                             <li class="dot"></li>
-                                            <li>{{post.publish | date}}</li>
+                                            <li><span class="fa fa-calendar-alt pr-2"></span>{{post.publish | date}}</li>
                                         </ul>
                                     </div>
                                 </div>
