🎨 Display a message when their is no post available

--- a/templates/dashboard/blog/published_articles.html
+++ b/templates/dashboard/blog/published_articles.html
@@ -42,6 +42,7 @@
 
 			<section class="mb-4">
 				<!-- Section Title -->
+				{% if posts %}
 				<div class="py-4">
 					<h4>List of Published Articles</h4>
 				</div>
@@ -88,6 +89,14 @@
 					</div>
 					{% endfor %}
 				</div>
+				{% else %}
+				<div class="py-4 text-center">
+					<img src="{% static 'dashboard/assets/img/illustrations/not_found_60pq.svg' %}" class="pb-3" alt="">
+					<p>This is where you can manage your published posts, but you haven't written anything yet.</p>
+					<a href="{% url 'dashboard:article-create' %}" class="btn btn-gray-800 text-white">Write your first post now</a>
+				</div>
+				
+				{% endif %}
 			</section>
 
         </main>
