--- a/templates/dashboard/blog/drafted_articles.html
+++ b/templates/dashboard/blog/drafted_articles.html
@@ -42,6 +42,7 @@
 
 			<section class="mb-4">
 				<!-- Section Title -->
+				{% if posts %}
 				<div class="py-4">
 					<h4>List of Published Articles</h4>
 				</div>
@@ -52,7 +53,7 @@
 						<div class="card h-100 border-light shadow-sm">
 							<img src="{{ post.thumbnail.url }}" class="card-img-top post-card-img" alt="...">
 							<div class="card-body">
-								<a href="" class="text-center">
+								<a href="{% url 'dashboard:post_details' post.slug %}" class="text-center">
 									<h5 class="card-title">{{ post.title }}</h5>
 								</a>
 								<p class="card-text">{{ post.overview | truncatewords_html:10 }}</p>
@@ -68,7 +69,7 @@
 											<i class="fas fa-chevron-down" ></i>
 										</span>
 										<div class="dropdown-menu dashboard-dropdown dropdown-menu-start mt-2 py-1">
-											<a class="dropdown-item d-flex align-items-center" href="#">
+											<a class="dropdown-item d-flex align-items-center" href="{% url 'dashboard:edit-post' post.slug %}">
 												<span class="dropdown-icon text-gray-400 me-2 ">
 													<i class="fas fa-feather-alt"></i>
 												</span>
@@ -88,6 +89,13 @@
 					</div>
 					{% endfor %}
 				</div>
+				{% else %}
+				<div class="py-4 text-center">
+					<img src="{% static 'dashboard/assets/img/illustrations/not_found_60pq.svg' %}" class="pb-3" alt="">
+					<p>This is where you can manage your drafted posts, but you haven't written anything yet.</p>
+					<a href="{% url 'dashboard:article-create' %}" class="btn btn-gray-800 text-white">Write your first post now</a>
+				</div>
+				{% endif %}
 			</section>
 
         </main>
