Return to the home page when click on the logo

--- a/templates/dashboard/layouts/base.html
+++ b/templates/dashboard/layouts/base.html
@@ -34,7 +34,7 @@
     <body>
 
         <nav class="navbar navbar-dark navbar-theme-primary px-4 col-12 d-lg-none">
-			<a class="navbar-brand me-lg-5" href="dashboard.html">
+			<a class="navbar-brand me-lg-5" href="{% url 'dashboard:dashboard' %}">
 				<img class="navbar-brand-dark" src="{% static 'dashboard/assets/img/brand/logo-white.png' %}" alt="Virtips logo">
 				<img class="navbar-brand-light" src="{% static 'dashboard/assets/img/brand/logo-dark.png' %}" alt="Virtips logo">
 			</a>
