--- a/templates/dashboard/blog/post_details.html
+++ b/templates/dashboard/blog/post_details.html
@@ -110,23 +110,23 @@
 							<div class="social-media px-md-3">
 								<ul class="list-inline">
 									<li>
-										<a href="" class="color-facebook">
+										<a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" target="_blank" class="color-facebook">
 											<i class="fab fa-facebook-f"></i>
 										</a>
 									</li>
 									<li>
-										<a href="" class="color-instagram">
-											<i class="fab fa-instagram"></i>
+										<a href="https://api.whatsapp.com/send?text={{ request.build_absolute_uri }}" class="color-whatsapp">
+											<i class="fab fa-whatsapp"></i>
 										</a>
 									</li>
 									<li>
-										<a href="" class="color-twitter">
+										<a href="http://twitter.com/share?text={{ article.title }}. &url={{ request.build_absolute_uri }}" target="_blank" class="color-twitter">
 											<i class="fab fa-twitter"></i>
 										</a>
 									</li>
 									<li>
-										<a href="" class="color-linkedin">
-											<i class="fab fa-linkedin-in"></i>
+										<a href="https://telegram.me/share/url?url={{ request.build_absolute_uri }}&text={{ article.title }}" target="_blank" class="color-telegram">
+											<i class="fab fa-telegram-plane"></i>
 										</a>
 									</li>
 								</ul>
