--- a/templates/dashboard/blog/update_article.html
+++ b/templates/dashboard/blog/update_article.html
@@ -5,11 +5,12 @@
 <!-- Specific Page CSS goes HERE  -->
 
 {% block stylesheets %}
-    <link rel="stylesheet" href="{% static "dashboard/css/tagsinput.css" %}">
+    <link rel="stylesheet" href="{% static "dashboard/css/bootstrap-tagsinput.css" %}">
 {% endblock stylesheets %}
 {% block javascript %}
 	{{ block.super }}
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script src="{% static 'dashboard/assets/js/bootstrap-tagsinput.js' %}"></script>
         <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
         <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 {% endblock javascript %}
@@ -22,6 +23,7 @@
 
             <!-- Article Form -->
             <section class="py-5">
+                {% include 'dashboard/includes/alert.html' %}
 				<div class="pb-2">
 					<h4>Write A New Article</h4>
 				</div>
@@ -48,7 +50,9 @@
                                     </div>
                                     <div class="my-2 col-md-6">
                                         <label for="exampleFormControlInput1" class="form-label">Tags</label>
-                                        <input type="text" class="form-control" name="tags" id="tags" value="{% for tag in post.tags.all %}{{ tag }}, {% endfor %}" placeholder="Example: sports, game, politics">
+                                        <input type="text" class="form-control" name="tags" id="tags" 
+                                        value="{% for tag in post.tags.all %}{{ tag }}, {% endfor %}" placeholder="Example: sports, game, politics"
+                                        data-role="tagsinput">
                                     </div>
                                     <div class="my-2 col-md-6">
                                         <label for="formFile" class="form-label">Thumbnail</label>
