Return to the post details page and show a successfully message after creating a post

--- a/templates/dashboard/blog/post_details.html
+++ b/templates/dashboard/blog/post_details.html
@@ -55,7 +55,7 @@
 
 			<div class="container">
 				{% include 'dashboard/includes/alert.html' %}
-				<div class="card border-0 shadow mx-auto mb-4">
+				<div class="card border-0 shadow mx-auto my-4">
 					<div class="card-body">
 						<div class="px-4 py-4">
 							<img src="{{post.thumbnail.url}}" alt="" id="article-thumbnail">
