--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.name}}</a>
+                                            <a href="{% url 'blog:author' post.author.user.username%}">{{post.author.full_name}}</a>
                                         </li>
                                         <li class="dot"></li>
                                         <li>{{post.publish | date}}</li>
