Add default picture for comments authors

--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -208,7 +208,7 @@
                         <ul class="widget-comments">
                             {% for comment in comments %}
                             <li class="comment-item">
-                                <img src="{% static 'img/user/1.jpg' %}" alt="">
+                                <img src="{% static 'img/author/default-profile.png' %}" alt="">
                                 <div class="content">
                                     <ul class="info list-inline">
                                         <li>{{comment.name}}</li>
