Change link of icons

--- a/templates/dashboard/layouts/base.html
+++ b/templates/dashboard/layouts/base.html
@@ -7,17 +7,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Favicon -->
-        <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/static/assets/img/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/favicon.ico' %}">
-        <link rel="manifest" href="/static/assets/img/favicon/site.webmanifest">
-        <link rel="mask-icon" href="/static/assets/img/favicon/safari-pinned-tab.svg" color="#ffffff">
-        <meta name="msapplication-TileColor" content="#ffffff">
-        <meta name="theme-color" content="#ffffff">
+        <link rel="apple-touch-icon" sizes="120x120" href="{% static 'img/icon/icon-120x120.png' %}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/icon/favicon-32x32.png' %}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/icon/favicon-16x16.png' %}">
+        <link rel="manifest" href="{% static 'site.webmanifest' %}">
 
         <!-- Primary Meta Tags -->
         <title>
-            {% block title %}Author{% endblock %} | VirTips
+            {% block title %}Author's Dashboard{% endblock %} | VirTips
         </title>
 
         <!-- Fontawesome -->
