--- a/templates/dashboard/profile/profile.html
+++ b/templates/dashboard/profile/profile.html
@@ -1,6 +1,6 @@
 {% extends "dashboard/layouts/base.html" %}
 
-{% block title %} Add Category {% endblock %} 
+{% block title %} {{ request.user.username }}'s Profile {% endblock %} 
 {% load static %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
