🏷️ Update page title

--- a/templates/dashboard/profile/settings.html
+++ b/templates/dashboard/profile/settings.html
@@ -1,6 +1,6 @@
 {% extends "dashboard/layouts/base.html" %}
 
-{% block title %} Add Category {% endblock %} 
+{% block title %} Update Your Profile {% endblock %} 
 {% load static %}
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}
